# fluidb-org

./: .gitignore  CMakeLists.txt  Makefile  NOTES.org  Shakefile.hs  branches-yaguajay.sh  branches.sh  build-all-yaguajay.sh  build-all.sh  build-cpp-test.sh  build-plot.py  build-ssb.sh  build-workload-yaguajay.sh  build-workload.sh  build-yaguajay.sh  build.sh  clean-workload-yaguajay.sh  clean-workload.sh  floskell.json  hie.yaml  package.yaml  profile.sh  shell.nix  stack.yaml
bama/: CMakeLists.txt  README
bama/include/: CMakeLists.txt  aggregation.hh  bama99file.hh  bamify.hh  book.cc  book.hh  codegen.hh  codegen_new.hh  common.hh  defs.hh  discrim_sort.py  expressions.hh  file.hh  grace_join.hh  heap_sort.hh  io.hh  join.hh  limit.hh  memfile.hh  merge_join.hh  page.hh  print_record.hh  projection.hh  record_map.hh  record_stream.hh  record_stream_test.cpp  require.hh  run_tests.sh  select.hh  sort.hh  test.cpp  test_heap_sort.cpp  test_join.cpp  test_query.cpp  test_record_map.cpp  union.hh  unjoin.hh  util.hh  vecfile.hh
nix/rash/: default.nix
nix/ssb/: default.nix
scratch/: Cardinality.hs  FoldPlans.hs  Materializable.hs  Multiply.hs  SolveUtils.hs  TriggerCodeTail.hs
src/Control/: Antisthenis.hs
src/Control/Antisthenis/: #Bool.hs#  #Minimum.hs#  AssocContainer.hs  Bool.hs  Convert.hs  Evolve.hs  Lens.hs  Minimum.hs  Multiply.hs  NOTES.org  Sum.hs  Test.hs  Types.hs  VarMap.hs  Zipper.hs  ZipperId.hs
src/Control/Utils/: Free.hs
src/Data/: Bipartite.hs  BipartiteGraph.hs  CppAst.hs  DotLatex.hs  NodeContainers.hs
src/Data/Cluster/: ClusterConfig.hs  FoldPlans.hs  InsertQuery.hs  Propagators.hs  PutCluster.hs  Types.hs
src/Data/CnfQuery/: Build.hs  BuildProduct.hs  BuildUtils.hs  (+3 more)
src/FluiDB/: Classes.hs  ConfValues.hs  SumTypes.hs  Types.hs  Utils.hs
src/Test/: FSpec.hs
ssb-workload/: CMakeLists.txt  io_perf.txt  op_perf_prev.txt  query-indiv-17000-012.cpp  query-indiv-17000-012.plan.txt  query-indiv-17000-023.plan.txt  query-indiv-17000-024.cpp  query-indiv-22000-001.cpp  query-indiv-22000-004.cpp  query-indiv-22000-005.cpp  query-indiv-22000-005.plan.txt  query-indiv-22000-006.cpp  query-indiv-22000-007.cpp  query-indiv-22000-008.cpp  query-indiv-22000-009.cpp  query-indiv-22000-010.cpp  query-indiv-22000-011.cpp  query-indiv-22000-011.plan.txt  query-indiv-22000-012.cpp  query-indiv-22000-012.plan.txt  query-indiv-23000-004.cpp  query-indiv-23000-005.cpp  query-indiv-23000-005.plan.txt  query-indiv-23000-006.cpp  query-indiv-23000-006.plan.txt  query-indiv-23000-007.cpp  query-indiv-23000-007.plan.txt  query-indiv-23000-008.cpp  query-indiv-23000-008.plan.txt  query-indiv-23000-009.cpp  query-indiv-23000-009.plan.txt  query-indiv-23000-010.cpp  query-indiv-23000-011.cpp  query-indiv-23000-012.cpp  query-indiv-23000-012.plan.txt  query-indiv-23000-013.cpp  query-indiv-23000-013.plan.txt  query-indiv-26000-002.cpp  query-indiv-26000-004.cpp  query-indiv-26000-004.plan.txt  (+459 more)
ssb-workload/indiv/: CMakeLists.txt  query1.cpp  query10.cpp  query11.cpp  query12.cpp  query2.cpp  query3.cpp  query4.cpp  query5.cpp  query6.cpp  query7.cpp  query8.cpp  query9.cpp
ssb-workload/main/: CMakeLists.txt  query10.cpp  query11.cpp  query12.cpp  query13.cpp  query14.cpp  query15.cpp  query16.cpp  query17.cpp  query18.cpp  query19.cpp  query2.cpp  query20.cpp  query21.cpp  query22.cpp  query23.cpp  query24.cpp  query25.cpp  query26.cpp  query27.cpp  query28.cpp  query29.cpp  query3.cpp  query30.cpp  query4.cpp  query5.cpp  query6.cpp  query7.cpp  query8.cpp  query9.cpp
tools/Bamify/: Main.hs
tools/Baseline/: Main.hs
tools/Benchmark/: Main.hs
tools/ReadDump/: Main.hi  Main.hs
(+204 files in other folders)
